// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android withDivider should render correctly 1`] = `
<WithDivider
  accessibilityLabel="Example Card"
  mainStyle={null}
  onPress={[MockFunction]}
  padded={true}
  stub={
    <withTheme(BpkText)>
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </withTheme(BpkText)>
  }
  stubStyle={null}
  theme={null}
  vertical={false}
>
  <withTheme(BpkText)>
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </withTheme(BpkText)>
</WithDivider>
`;

exports[`Android withDivider should render correctly with "cornerStyle=large" 1`] = `
<WithDivider
  accessibilityLabel="Example Card"
  cornerStyle="lg"
  mainStyle={null}
  onPress={[MockFunction]}
  padded={true}
  stub={
    <withTheme(BpkText)>
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </withTheme(BpkText)>
  }
  stubStyle={null}
  theme={null}
  vertical={false}
>
  <withTheme(BpkText)>
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </withTheme(BpkText)>
</WithDivider>
`;

exports[`Android withDivider should render correctly with arbitrary props 1`] = `
<WithDivider
  accessibilityLabel="Example Card"
  mainStyle={null}
  onPress={[MockFunction]}
  padded={true}
  stub={
    <withTheme(BpkText)>
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </withTheme(BpkText)>
  }
  stubStyle={null}
  testID="arbitrary value"
  theme={null}
  vertical={false}
>
  <withTheme(BpkText)>
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </withTheme(BpkText)>
</WithDivider>
`;

exports[`Android withDivider should render correctly with custom main style 1`] = `
<WithDivider
  accessibilityLabel="Example Card"
  mainStyle={
    Object {
      "flex": 2,
    }
  }
  onPress={[MockFunction]}
  padded={true}
  stub={
    <withTheme(BpkText)>
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </withTheme(BpkText)>
  }
  stubStyle={null}
  theme={null}
  vertical={false}
>
  <withTheme(BpkText)>
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </withTheme(BpkText)>
</WithDivider>
`;

exports[`Android withDivider should render correctly with custom stub style 1`] = `
<WithDivider
  accessibilityLabel="Example Card"
  mainStyle={null}
  onPress={[MockFunction]}
  padded={true}
  stub={
    <withTheme(BpkText)>
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </withTheme(BpkText)>
  }
  stubStyle={
    Object {
      "flex": 3,
    }
  }
  theme={null}
  vertical={false}
>
  <withTheme(BpkText)>
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </withTheme(BpkText)>
</WithDivider>
`;

exports[`Android withDivider should render correctly without padding 1`] = `
<WithDivider
  accessibilityLabel="Example Card"
  mainStyle={null}
  onPress={[MockFunction]}
  padded={false}
  stub={
    <withTheme(BpkText)>
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
    </withTheme(BpkText)>
  }
  stubStyle={null}
  theme={null}
  vertical={false}
>
  <withTheme(BpkText)>
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </withTheme(BpkText)>
</WithDivider>
`;
